; ModuleID = '/home/carl/AnghaBench/h2o/lib/core/extr_headers.c_h2o_set_header.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/core/extr_headers.c_h2o_set_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @h2o_set_header(i32* %0, %struct.TYPE_7__* %1, i32* %2, i8* %3, i64 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %9, align 8
  store i32* %2, i32** %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @h2o_find_header(%struct.TYPE_7__* %15, i32* %16, i32 -1)
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %14, align 4
  %19 = icmp ne i32 %18, -1
  br i1 %19, label %20, label %36

20:                                               ; preds = %6
  %21 = load i32, i32* %13, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %20
  %24 = load i8*, i8** %11, align 8
  %25 = load i64, i64* %12, align 8
  %26 = call i32 @h2o_iovec_init(i8* %24, i64 %25)
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %28, align 8
  %30 = load i32, i32* %14, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  store i32 %26, i32* %33, align 4
  br label %34

34:                                               ; preds = %23, %20
  %35 = load i32, i32* %14, align 4
  store i32 %35, i32* %7, align 4
  br label %43

36:                                               ; preds = %6
  %37 = load i32*, i32** %8, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %39 = load i32*, i32** %10, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = load i64, i64* %12, align 8
  %42 = call i32 @h2o_add_header(i32* %37, %struct.TYPE_7__* %38, i32* %39, i32* null, i8* %40, i64 %41)
  store i32 %42, i32* %7, align 4
  br label %43

43:                                               ; preds = %36, %34
  %44 = load i32, i32* %7, align 4
  ret i32 %44
}

declare dso_local i32 @h2o_find_header(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @h2o_iovec_init(i8*, i64) #1

declare dso_local i32 @h2o_add_header(i32*, %struct.TYPE_7__*, i32*, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
